WebCore/platform/graphics/win/MediaPlayerPrivateQuickTimeVisualContext.cpp
@@ -64,6 +64,8 @@ const CFStringRef kMinCoreVideoVersion = CFSTR("1.0.0.2");
 
 namespace WebCore {
 
+static CGImageRef CreateCGImageFromPixelBuffer(QTPixelBuffer buffer);
+
 SOFT_LINK_LIBRARY(Wininet)
 SOFT_LINK(Wininet, InternetSetCookieExW, DWORD, WINAPI, (LPCWSTR lpszUrl, LPCWSTR lpszCookieName, LPCWSTR lpszCookieData, DWORD dwFlags, DWORD_PTR dwReserved), (lpszUrl, lpszCookieName, lpszCookieData, dwFlags, dwReserved))
 
@@ -141,6 +143,7 @@ MediaPlayerPrivateQuickTimeVisualContext::MediaPlayerPrivateQuickTimeVisualConte
 MediaPlayerPrivateQuickTimeVisualContext::~MediaPlayerPrivateQuickTimeVisualContext()
 {
     tearDownVideoRendering();
+    m_visualContext->setMovie(0);
     cancelCallOnMainThread(&VisualContextClient::retrieveCurrentImageProc, this);
 }
 
@@ -284,6 +287,7 @@ void MediaPlayerPrivateQuickTimeVisualContext::load(const String& url)
 
     CFDictionaryRef options = QTMovieVisualContext::getCGImageOptions();
     m_visualContext = adoptRef(new QTMovieVisualContext(m_visualContextClient.get(), options));
+    m_visualContext->setMovie(m_movie.get());
 }
 
 void MediaPlayerPrivateQuickTimeVisualContext::play()
@@ -629,7 +633,20 @@ void MediaPlayerPrivateQuickTimeVisualContext::paint(GraphicsContext* p, const I
     if (m_qtVideoLayer)
         return;
 #endif
+    QTPixelBuffer buffer = m_visualContext->imageForTime(0);
+    if (buffer.pixelBufferRef()) {
+        CGImageRef image = CreateCGImageFromPixelBuffer(buffer);
+        
+        CGContextRef context = p->platformContext();
+        CGContextSaveGState(context);
+        CGContextTranslateCTM(context, r.x(), r.y());
+        CGContextTranslateCTM(context, 0, r.height());
+        CGContextScaleCTM(context, 1, -1);
+        CGContextDrawImage(context, CGRectMake(0, 0, r.width(), r.height()), image);
+        CGContextRestoreGState(context);
 
+        CGImageRelease(image);
+    }
     paintCompleted(*p, r);
 }
 
@@ -654,7 +671,8 @@ void MediaPlayerPrivateQuickTimeVisualContext::VisualContextClient::imageAvailab
 
 void MediaPlayerPrivateQuickTimeVisualContext::visualContextTimerFired(Timer<MediaPlayerPrivateQuickTimeVisualContext>*)
 {
-    retrieveCurrentImage();
+    if (m_visualContext && m_visualContext->isImageAvailableForTime(0))
+        retrieveCurrentImage();
 }
 
 static CFDictionaryRef QTCFDictionaryCreateWithDataCallback(CFAllocatorRef allocator, const UInt8* bytes, CFIndex length)
@@ -729,27 +747,29 @@ void MediaPlayerPrivateQuickTimeVisualContext::retrieveCurrentImage()
         return;
 
 #if USE(ACCELERATED_COMPOSITING)
-    if (!m_qtVideoLayer)
-        return;
+    if (m_qtVideoLayer) {
 
-    QTPixelBuffer buffer = m_visualContext->imageForTime(0);
-    if (!buffer.pixelBufferRef())
-        return;
+        QTPixelBuffer buffer = m_visualContext->imageForTime(0);
+        if (!buffer.pixelBufferRef())
+            return;
 
-    WKCACFLayer* layer = static_cast<WKCACFLayer*>(m_qtVideoLayer->platformLayer());
+        WKCACFLayer* layer = static_cast<WKCACFLayer*>(m_qtVideoLayer->platformLayer());
 
-    if (!buffer.lockBaseAddress()) {
-        CFTimeInterval imageTime = QTMovieVisualContext::currentHostTime();
+            if (!buffer.lockBaseAddress()) {
+               CFTimeInterval imageTime = QTMovieVisualContext::currentHostTime();
 
-        CGImageRef image = CreateCGImageFromPixelBuffer(buffer);
-        layer->setContents(image);
-        CGImageRelease(image);
+                CGImageRef image = CreateCGImageFromPixelBuffer(buffer);
+                layer->setContents(image);
+                CGImageRelease(image);
 
-        buffer.unlockBaseAddress();
-        layer->rootLayer()->setNeedsRender();
-    }
-    m_visualContext->task();
+                buffer.unlockBaseAddress();
+                layer->rootLayer()->setNeedsRender();
+            }
+    } else
 #endif
+        m_player->repaint();
+
+    m_visualContext->task();
 }
 
 static HashSet<String> mimeTypeCache()
@@ -875,8 +895,6 @@ void MediaPlayerPrivateQuickTimeVisualContext::setUpVideoRendering()
     if (currentMode == MediaRenderingMovieLayer || preferredMode == MediaRenderingMovieLayer)
         m_player->mediaPlayerClient()->mediaPlayerRenderingModeChanged(m_player);
 #endif
-
-    m_visualContext->setMovie(m_movie.get());
 }
 
 void MediaPlayerPrivateQuickTimeVisualContext::tearDownVideoRendering()
@@ -885,8 +903,6 @@ void MediaPlayerPrivateQuickTimeVisualContext::tearDownVideoRendering()
     if (m_qtVideoLayer)
         destroyLayerForMovie();
 #endif
-
-    m_visualContext->setMovie(0);
 }
 
 bool MediaPlayerPrivateQuickTimeVisualContext::hasSetUpVideoRendering() const
